--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			type="font/woff2"
 			crossorigin="anonymous"
 		/>
-		<!-- <script src="vendors/react-with-dom.js"></script> -->
+
 		<script
 			crossorigin
 			src="https://unpkg.com/react@18/umd/react.production.min.js"
@@ -21,6 +21,12 @@
 			src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
 		></script>
 		<link rel="stylesheet" type="text/css" href="reset.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
@@ -44,7 +50,7 @@
 
 			<div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div>
 		</footer>
-		<!-- <script src="vendors/babel.min.js"></script> -->
+
 		<script src="App.js" type="text/javascript"></script>
 	</body>
 </html>
