--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</li>
 			</ul>
 
-			<div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div>
+			<div class="footer__copyright">© 1997–2023 ООО «Яндекз»</div>
 		</footer>
 	</body>
 </html>
